--- a/styles/main.css
+++ b/styles/main.css
@@ -2,20 +2,57 @@
 * @Author: RayLin
 * @Date:   2016-05-11 17:59:30
 * @Last Modified by:   RayLin
-* @Last Modified time: 2016-05-11 18:08:03
+* @Last Modified time: 2016-05-13 12:11:19
 */
 
-html, body {
-  height: 100%;
+html, body, input, button {
+  font-family: Sawasdee;
+  font-size: 20px;
 }
 
-html {
-  background: #eee;
+.user-info {
+    margin: 10px;
 }
 
-#app {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+.todo {
 }
 
+.todo__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.todo__item {
+  padding: .5em .25em;
+  border-bottom: solid 1px #eee;
+}
+
+.todo__item:hover {
+  background: #f7f7f7;
+  cursor: pointer;
+}
+
+.todo__entry {
+  border: solid 1px #ccc;
+  padding: .25em .5em;
+  border-radius: .2em;
+  background: #f3f3f3;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.todo__button {
+  border: 0;
+  border-radius: .2em;
+  background: #71B7FF;
+  color: #fff;
+  padding: .25em .5em;
+  margin: .5em 0;
+  margin-right: .25em;
+  cursor: pointer;
+}
+
+.todo__button:hover {
+  background: #B2D8FF;
+}
